--- a/debugging/change_background.html
+++ b/debugging/change_background.html
@@ -1,38 +1,41 @@
-u<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Change Background Color</title>
-<style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,
+ initial-scale=1.0">
+  <title>Change Background Color</title>
+  <style>
     body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        padding-top: 50px;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding-top: 50px;
     }
     button {
-        padding: 10px 20px;
-        font-size: 16px;
-        cursor: pointer;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
     }
-</style>
+  </style>
 </head>
 <body>
 
-<h2>Click the button to change the background color</h2>
+  <h2>Click the button to change the background color</h2>
+  
+  <button id="colorButton">Change Color</button>
 
-<button id="colorButton">Change Color</button>
-
-<script>
-    document.getElementById("colorButton").addEventListener("click", function() {
-        changeBackgroundColor();
+  <script>
+    document.getElementById("colorButton").addEventListener("click",
+ function() {
+      changeBackgroundColor();
     });
 
     function changeBackgroundColor() {
-        var randomColor = "#" + Math.floor(Math.random()*16777215).toString(16);
-        document.body.style.backgroundColor = randomColor;
+      var randomColor = "#" + Math.floor(Math.random()
+* 16777215).toString(16);
+      document.body.style.backgroundColor = randomColor;
     }
-</script>
+  </script>
 
 </body>
 </html>
