--- a/debugging/change_background.html
+++ b/debugging/change_background.html
@@ -1,41 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Change Background Color</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding-top: 50px;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-  </style>
+    <title>Hello, World!</title>
+    <link rel="stylesheet" href="styles.css" />
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding-top: 50px;
+        }
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
+    <h1 class="title">Hello World!</h1>
+    <p id="currentTime"></p>
+    <button id="colorButton">Change Color</button>
+    <script>
+        document.getElementById("colorButton").addEventListener("click", function() {
+            changeBackgroundColor();
+        });
 
-  <h2>Click the button to change the background color</h2>
-
-  <!-- Assurez-vous que l'ID du bouton est le même dans le HTML et le JavaScript -->
-  <button id="colorButton">Change Color</button>
-
-  <script>
-    document.getElementById("colorButton").addEventListener("click", function() {
-      changeBackgroundColor();
-    });
-
-    function changeBackgroundColor() {
-      // Générer une couleur aléatoire
-      var randomColor = "#" + Math.floor(Math.random() * 16777215).toString(16);
-      // Changer la couleur de fond de la page
-      document.body.style.backgroundColor = randomColor;
-    }
-  </script>
-
+        function changeBackgroundColor() {
+            var randomColor = "#" + Math.floor(Math.random() * 16777215).toString(16);
+            document.body.style.backgroundColor = randomColor;
+        }
+    </script>
+    <script src="script.js"></script>
 </body>
 </html>
