--- a/debugging/change_background.html
+++ b/debugging/change_background.html
@@ -21,10 +21,13 @@
 
 <h2>Click the button to change the background color</h2>
 
+<!-- Corrected the button id to colorButton -->
 <button id="colorButton">Change Color</button>
 
 <script>
     document.getElementById("colorButton").addEventListener("click", function() {
+        changeBackgroundColor();
+    });
 
     function changeBackgroundColor() {
         var randomColor = "#" + Math.floor(Math.random()*16777215).toString(16);
